# fastapi-template

./: .coveragerc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pre_start.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: check-commits.yml  run-tests.yml
app/: main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: todo.py
app/common/exceptions/: __init__.py
app/common/models/: __init__.py  table_model.py  todo.py
app/common/repositories/: base.py
app/common/services/: base.py
app/core/: settings.py
app/db/: database.py
app/todo/repositories/: todo.py
app/todo/schemas/: __init__.py  todo.py
app/todo/services/: todo.py
migrations/: env.py
migrations/versions/: 2d3b02a0485e_create_todo.py
scripts/: create_test_database.sh  install-build-packages.sh  pre-start.sh
scripts/annotate-coverage/: annotate.py  entrypoint.sh
tests/: base_client.py  conftest.py  factories.py  test_todo_endpoint.py
